--- a/example-java/pom.xml
+++ b/example-java/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>scala-library</artifactId>
             <version>2.11.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.cedarsoftware</groupId>
+            <artifactId>json-io</artifactId>
+            <version>2.2.29</version>
+        </dependency>
     </dependencies>
 
 
